tests/negative/neg_pr118i_type_literal_collision.safe
package neg_pr118i_type_literal_collision

   type traffic is (red, yellow, green)
   type red is integer
